--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
   <string name="app_name">Koloro</string>
+  <string name="preferences_label">Preferences</string>
+  <string name="show_notification_label">Show notification</string>
+  <string name="capture_button_visible_label">Capture button visible</string>
 </resources>
