--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
   <string name="preferences_label">Preferences</string>
   <string name="show_notification_label">Show notification</string>
   <string name="capture_button_visible_label">Capture button visible</string>
+  <string name="start_capture_button">Start Capture</string>
 </resources>
