--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
   <string name="capture_button_visible_label">Capture button visible</string>
   <string name="start_capture_button">Start Capture</string>
   <string name="store_captures_label">Store screen captures in device gallery</string>
+  <string name="notification_text">Overlay started. Hit Capture</string>
+  <string name="notification_ticker">Overlay started</string>
 </resources>
