--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
   <string name="notification_text">Overlay started. Hit Capture</string>
   <string name="notification_ticker">Overlay started</string>
   <string name="multi_shot_label">Multi-shot</string>
+  <string name="copy_button">Copy</string>
 </resources>
