update color picker ui and add note views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
   <string name="capture_screen_description">Capture screen</string>
   <string name="copied_clipboard_toast">Copied to clipboard</string>
   <string name="screen_capture_toast">Capturing screen. Please wait...</string>
+  <string name="save_button">Save</string>
+  <string name="note_button">Note</string>
   <string-array name="capture_button_position_array">
     <item>Top right</item>
     <item>Top left</item>
