--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
   <string name="note_button">Note</string>
   <string name="cancel_button">Cancel</string>
   <string name="saved_color_note_title">Saved Color Note</string>
+  <string name="note_hint">Type a note</string>
   <string-array name="capture_button_position_array">
     <item>Top right</item>
     <item>Top left</item>
