--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
   <string name="capture_button_visible_label">Capture button visible</string>
   <string name="start_capture_button">Start Capture</string>
   <string name="store_captures_label">Store screen captures in device gallery</string>
-  <string name="notification_text">Overlay started. Hit Capture</string>
+  <string name="notification_title">Koloro: Ready to capture screen</string>
+  <string name="notification_text">Use overlay buttons to continue</string>
   <string name="notification_ticker">Overlay started</string>
   <string name="multi_shot_label">Multi-shot</string>
   <string name="copy_button">Copy</string>
@@ -21,6 +22,8 @@
   <string name="saved_color_note_title">Saved Color Note</string>
   <string name="note_hint">Type a note</string>
   <string name="saved_colors_button">Saved Colors</string>
+  <string name="capture_button_position">Capture button position</string>
+  <string name="vibration_label">Vibration</string>
   <string-array name="capture_button_position_array">
     <item>Top right</item>
     <item>Top left</item>
