--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
   <string name="preferences_label">Preferences</string>
   <string name="show_notification_label">Show notification</string>
   <string name="capture_button_visible_label">Capture button visible</string>
-  <string name="start_capture_button">Launch Overlay</string>
+  <string name="start_capture_button">Start Overlay</string>
   <string name="store_captures_label">Store screen captures in device gallery</string>
   <string name="notification_title">Koloro: Ready to capture screen</string>
   <string name="notification_text">Use overlay buttons to continue</string>
