--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@ Pellentesque malesuada rutrum imperdiet. Suspendisse efficitur quam consequat le
   <string name="overlay_already_launched_message">Overlay already launched</string>
   <string name="color_format_label">Color format</string>
   <string name="upgrade_button_text">Activate premium features</string>
+  <string name="saved_toast">Saved</string>
 
   <string-array name="capture_button_position_array">
     <item>Top right</item>
